# Yadro_Impulse_C

./: README.md
yadro_impulse_gameclub/: CMakeLists.txt  main.cpp
yadro_impulse_gameclub/GamerMaster/: GamerMaster.cpp  GamerMaster.hpp
yadro_impulse_gameclub/GamerQueue/: GamerQueue.hpp
yadro_impulse_gameclub/Output/: Output.cpp  Output.hpp
yadro_impulse_gameclub/Parser/: Parser.cpp  Parser.hpp
yadro_impulse_gameclub/TableMaster/: TableMaster.cpp  TableMaster.hpp
yadro_impulse_gameclub/Time/: Time.cpp  Time.hpp
yadro_impulse_gameclub/txt_tests/: wrongOpenCloseTimeTest.txt  wrongTimeFormatTest.txt
